Fix box-sizing and rendering of buttons...
This prevents the buttons overflowing the page.

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,5 +1,11 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
     background-color: #f8f8f8;
+
+    margin: 0;
 }
 
 .row {
