--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -16,7 +16,7 @@
 
     top: -80px;
 
-    padding: 10px;
+    padding: 0;
 
     display: flex;
     flex-direction: column;
@@ -42,7 +42,7 @@
 
     top: 0;
 
-    padding: 10px;
+    padding: 0;
 
     display: flex;
     flex-direction: column;
